apps/iptv-epg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iptv-epg
  labels:
    app: iptv-epg
spec:
  type: ClusterIP
  selector:
    app: iptv-epg
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
